fix alignement of items in action navbar

--- a/geonode_mapstore_client/client/themes/geonode/less/_action-navbar.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_action-navbar.less
@@ -34,7 +34,8 @@
             flex: 1;
             padding: 0 0.8rem;
             ul:not(.dropdown-menu) {
-                display: inline-block;
+                display: inline-flex;
+                align-items: center;
                 flex-direction: row;
                 list-style-type: none;
                 padding: 0;
